# pipebin.dev

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: ci.yml
configs/: .env.example
deployment/: compose.local.yaml
libs/config/: BUILD.bazel  config.go
libs/hash/: BUILD.bazel  sha256hash.go  sha256hash_test.go
libs/logger/: BUILD.bazel  logger.go
libs/models/: BUILD.bazel  paste.go  paste_input.go
services/api/: Dockerfile
services/api/cmd/: BUILD.bazel  main.go
services/api/cmd/handler/: BUILD.bazel
services/api/cmd/repository/: BUILD.bazel
services/api/handler/: BUILD.bazel  health_handler.go  pastes_handler.go  pastes_handler_test.go
services/api/internal/config/: BUILD.bazel  config.go
services/api/internal/database/: BUILD.bazel  db.go
services/api/internal/httpx/: BUILD.bazel  client_ip.go  response.go
services/api/internal/middleware/: BUILD.bazel  logger.go  ratelimit.go  requestid.go
services/api/internal/server/: BUILD.bazel  router.go
services/api/internal/services/: BUILD.bazel  pastes_services.go  pastes_services_test.go  service.go
services/api/migrations/: 000001_create_pastes_table.up.sql  000002_add_burn_after_reading.down.sql  000002_add_burn_after_reading.up.sql  BUILD.bazel
services/api/repository/: BUILD.bazel  pastes_repository.go  repository.go
services/frontend/: BUILD.bazel  Dockerfile  embed.go
services/frontend/cmd/: BUILD.bazel  main.go
services/frontend/handlers/: BUILD.bazel  handlers.go
services/frontend/internal/config/: BUILD.bazel  config.go
services/frontend/internal/server/: BUILD.bazel  router.go
services/frontend/static/: style.css
services/frontend/templates/: 404.html  error.html  home.html  index.html  layout.html  paste.html  upload_result.html
