module(
    name = "pipebin.dev",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_alecthomas_chroma_v2", "com_github_go_ozzo_ozzo_validation_v4", "com_github_golang_migrate_migrate_v4", "com_github_google_uuid", "com_github_jackc_pgx_v5", "com_github_joho_godotenv", "com_github_matoous_go_nanoid_v2", "org_golang_x_time")
