load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/logger",
        "//services/api/internal/config",
        "//services/api/internal/server",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
