load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/logger",
        "//services/api/cmd/handler",
        "//services/api/cmd/repository",
        "//services/api/internal/config",
        "//services/api/internal/database",
        "//services/api/internal/server",
        "//services/api/internal/services",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cmd",
    data = ["//:configs/.env"],
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
