load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/logger",
        "//services/api/handler",
        "//services/api/internal/config",
        "//services/api/internal/database",
        "//services/api/internal/middleware",
        "//services/api/internal/server",
        "//services/api/internal/services",
        "//services/api/repository",
    ],
)

go_binary(
    name = "cmd",
    data = ["//:configs/.env"],
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
