load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = ["pastes_handler.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/hash",
        "//libs/models",
        "//services/api/internal/config",
        "//services/api/internal/httpx",
        "//services/api/internal/services",
        "@com_github_go_playground_validator_v10//:validator",
    ],
)
