load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "pastes_repository.go",
        "repository.go",
    ],
    importpath = "github.com/meanii/pipebin.dev/services/api/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/models",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
