load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["main.go"],
    importpath = "github.com/meanii/pipebin.dev/services/frontend/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/logger",
        "//services/frontend",
        "//services/frontend/handlers",
        "//services/frontend/internal/config",
        "//services/frontend/internal/server",
    ],
)
