load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["pastes_repository.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/cmd/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/models",
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
    ],
)
