load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["db.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/internal/database",
    visibility = ["//services/api:__subpackages__"],
    deps = [
        "//services/api/cmd/repository",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@org_uber_go_zap//:zap",
    ],
)
