load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["db.go"],
    importpath = "github.com/meanii/pipebin.dev/services/api/internal/database",
    visibility = ["//services/api:__subpackages__"],
    deps = [
        "//services/api/migrations",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/pgx/v5:pgx",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
