load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "logger.go",
        "ratelimit.go",
        "requestid.go",
    ],
    importpath = "github.com/meanii/pipebin.dev/services/api/internal/middleware",
    visibility = ["//services/api:__subpackages__"],
    deps = [
        "//services/api/internal/httpx",
        "@com_github_google_uuid//:uuid",
        "@org_golang_x_time//rate",
    ],
)
